Fix: Bootstrap 5 dark mode - control icons were not styled using the Bootstrap dark mode selector
https://github.com/DataTables/Dist-DataTables-Bootstrap5/issues/9

--- a/css/common.scss
+++ b/css/common.scss
@@ -168,7 +168,8 @@ table.dataTable {
     }
 }
 
-html.dark {
+html.dark,
+:root[data-bs-theme="dark"] {
 	table.dataTable {
 		td.dt-control {
 			&:before {
